# pg_bulkload

cmake/: CMakeLists.txt  pg_bulkload.iss  readme.txt
doc/: pg_bulkload-ja.html  pg_bulkload.html
include/: binary.h  logger.h  reader.h  writer.h
lib/: CMakeLists.txt  binary.c  logger.c  parser_binary.c  parser_function.c  pg_btree.c  pg_bulkload.c  pg_strutil.c  reader.c  source.c  writer.c  writer_binary.c  writer_buffered.c  writer_direct.c  writer_parallel.c
msvc/: bin.2010.vcxproj  lib.2010.vcxproj  lib.2010.vcxproj.filters  pg_bulkload.2010.sln  readme.txt
share/extension/: pg_bulkload--1.0.sql  pg_bulkload.control
util/: mswin.c
